--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,11 @@
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
-	color: #333;
+	color: #2C2F3F;
 	line-height: 1.5;
 }
 body {
-	background-color: #fdfdfd;
+	background-color: #2C2F3F;
 	margin: 0;
 	position:relative;
 }
@@ -18,15 +18,15 @@ ul, li {
 	color: #333;
 }
 a {
-	color: orange;
+	color: #FCA536;
 	text-decoration: none;
 }
 a:hover, a:focus {
-	color: #3397db;
+	color: white;
 	text-decoration: none;
 }
 a img{
-	border: none 0px #fff;
+	border: none 0px white;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
@@ -36,12 +36,12 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	display: block;
 }
 #maincontent {
-  background-color: #f3f3f3;
+  background-color: #97939A;
   min-height: 100%;
 }
 #footer {
-  background-color: #444;
-  color: #aaa;
+  background-color: #B73C37;
+  color: #EDE5CF;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -51,16 +51,18 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
-  background-color: #252831;
-  text-align:center;
+  height: 250px;
+  background-color: #2C2F3F;
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 nav h1 {
   margin: auto;
 }
 nav h1 a {
-  color: #fff;
-  font-size: 14pt;
+  color: white;
+  font-size: 36pt;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
@@ -88,27 +90,29 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #B73C37;
     text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
+    color: #B73C37;
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 800px;
   width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
-  align-items: center;
+  height: 200px;
+  display: flex;
+  background-color: #B73C37;
+  align-self: flex-end;
+  align-items: flex-end;
 }
 .filter-options h2 {
   color: white;
@@ -131,55 +135,69 @@ nav h1 a {
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
-  background-color: #f3f3f3;
-  list-style: outside none none;
+  background-color: #2C2F3F;
+  list-style: none none none;
   margin: 0;
-  padding: 30px 15px 60px;
-  text-align: center;
+  padding: 5% 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #restaurants-list li {
-  background-color: #fff;
-  border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
+  background-color: #EDE5CF;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 2.5% 0 2.5% 0;
+  width: 90%;
+  border-top-left-radius: 60px;
+  border-bottom-right-radius: 60px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
+  margin-top: 10%;
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 14pt;
+  color: #2C2F3F;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 25pt;
+  margin: 10% 5% 10% 5%;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  text-align: center;
   text-transform: uppercase;
 }
-#restaurants-list p {
-  margin: 0;
+
+#restaurants-list h3 {
+  margin: 5% 5% 0 5%;
   font-size: 11pt;
+  color: #97939A;
+  text-transform: uppercase;
+  text-align: end;
+}
+
+#restaurants-list p {
+  margin: 0 5% 5% 5%;
+  font-size: 11pt;
+  text-align: end;
 }
 #restaurants-list li a {
-  background-color: orange;
-  border-bottom: 3px solid #eee;
-  color: #fff;
-  display: inline-block;
-  font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
-  text-align: center;
-  text-decoration: none;
+  background-color: #FCA536;
+  color: white;
+  display: flex;
+  font-size: 45pt;
+  align-items: center;
+  justify-content: center;
   text-transform: uppercase;
+  height: 200px;
+  width: 100%;
+  border-bottom-right-radius: 60px;
+  margin: 0;
+  padding: 0;
 }
 
 /* ====================== Restaurant Details ====================== */
@@ -190,7 +208,7 @@ nav h1 a {
   z-index: 1000;
 }
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
+  background: #B73C37 none repeat scroll 0 0;
   height: 87%;
   position: fixed;
   right: 0;
