--- a/css/styles.css
+++ b/css/styles.css
@@ -39,12 +39,16 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   background-color: #97939A;
   min-height: 100%;
 }
+
 #footer {
   background-color: #B73C37;
   color: #EDE5CF;
-  font-size: 8pt;
-  letter-spacing: 1px;
-  padding: 25px;
+  max-height: 100px;
+  min-height: 100px;
+  font-size: 24pt;
+  letter-spacing: 2px;
+  padding: 5%;
+  margin-top: 5%;
   text-align: center;
   text-transform: uppercase;
 }
@@ -109,36 +113,40 @@ nav h1 a {
 .filter-options {
   width: 100%;
   height: 200px;
-  display: flex;
   background-color: #B73C37;
-  align-self: flex-end;
-  align-items: flex-end;
+  padding-top: 5%;
+  align-content: center;
 }
+
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 3rem;
+  text-align: end;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  padding-right: 5%;
 }
+
 .filter-options select {
-  background-color: white;
-  border: 1px solid #fff;
+  background-color: #97939A;
+  color: white;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
-  height: 35px;
+  font-size: 25pt;
+  text-align-last: center;
+  min-width: 380px;
+  max-width: 600px;
+  height: 150px;
   letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+  margin: 2% 2.5% 5% 7%;
+  padding: 0;
 }
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #2C2F3F;
   list-style: none none none;
-  margin: 0;
-  padding: 5% 0 0 0;
+  margin: 0 0 0 0;
+  padding: 10% 0 0 0;
   display: flex;
   flex-direction: column;
   align-items: center;
