--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,20 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
+body,td,th,p,ul{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 1em;
 	color: #2C2F3F;
-	line-height: 1.5;
 }
+
 body {
 	background-color: #2C2F3F;
 	margin: 0;
 	position:relative;
 }
-ul, li {
+li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
+	color: #2C2F3F;
 }
 a {
 	color: #FCA536;
@@ -30,47 +29,67 @@ a img{
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
 }
+
+h1 {
+  font-size: 1.25em;
+  font-weight: 500;
+}
+
+h2 {
+  font-size: 1.2em;
+}
+
+h3 {
+  font-size: 1.125em;
+}
+
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 #maincontent {
-  background-color: #97939A;
   min-height: 100%;
 }
 
 #footer {
   background-color: #B73C37;
   color: #EDE5CF;
-  max-height: 100px;
-  min-height: 100px;
-  font-size: 24pt;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  font-size: 1em;
   letter-spacing: 2px;
-  padding: 5%;
-  margin-top: 5%;
   text-align: center;
-  text-transform: uppercase;
+}
+
+#footer a {
+  margin: 0% 1%;
 }
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 250px;
+  height: 125px;
   background-color: #2C2F3F;
   display: flex;
+  flex-wrap: wrap;
   align-content: center;
   justify-content: center;
 }
+
 nav h1 {
-  margin: auto;
+  text-align: center; 
+  margin: auto 9%;
 }
+
 nav h1 a {
   color: white;
-  font-size: 36pt;
-  font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 5px;
   text-transform: uppercase;
 }
+
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
@@ -104,135 +123,165 @@ nav h1 a {
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
-#map {
-  height: 800px;
-  width: 100%;
-  background-color: #ccc;
+#map-container {
+  background-color: #97939A;
+  margin: 0;
+  padding: 0;
 }
+
+#map {
+  width: 100%;
+  height: 0;
+  padding: 0 0 100%;
+  margin: 0;
+}
+
 /* ====================== Restaurant Filtering ====================== */
+#restaurant-container {
+  margin: 0;
+  padding: 0;
+  min-height: 600px;
+}
+
 .filter-options {
   width: 100%;
-  height: 200px;
+  height: 100px;
   background-color: #B73C37;
-  padding-top: 5%;
-  align-content: center;
 }
 
 .filter-options h2 {
   color: white;
-  font-size: 3rem;
-  text-align: end;
-  font-weight: normal;
+  text-align: start;
+  font-weight: 400;
   line-height: 1;
-  padding-right: 5%;
+  margin: 6% 5% 4% 5%;
 }
 
-.filter-options select {
+.filter-selectors {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-evenly;
+  margin: 0% 0 5% 0;
+}
+
+.filter-selectors select {
   background-color: #97939A;
   color: white;
   font-family: Arial,sans-serif;
-  font-size: 25pt;
+  font-size: 1em;
   text-align-last: center;
-  min-width: 380px;
-  max-width: 600px;
-  height: 150px;
+  min-width: 150px;
+  height: 60px;
   letter-spacing: 0;
-  margin: 2% 2.5% 5% 7%;
-  padding: 0;
+  margin: 0;
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #2C2F3F;
-  list-style: none none none;
-  margin: 0 0 0 0;
-  padding: 10% 0 0 0;
+  margin: 10% 0 8% 0;
+  padding: 0%;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
+
 #restaurants-list li {
   background-color: #EDE5CF;
   font-family: Arial, Helvetica, sans-serif;
-  margin: 2.5% 0 2.5% 0;
+  margin: 4% 0;
   width: 90%;
-  border-top-left-radius: 60px;
-  border-bottom-right-radius: 60px;
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;
 }
-#restaurants-list .restaurant-img {
-  background-color: #ccc;
-  display: block;
-  margin: 0;
-  margin-top: 10%;
-  max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
-}
+
 #restaurants-list li h1 {
   color: #2C2F3F;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 25pt;
-  margin: 10% 5% 10% 5%;
-  font-weight: 200;
-  letter-spacing: 0;
+  margin: 8% 5% 8% 5%;
+  font-weight: 600;
+  letter-spacing: 2px;
   line-height: 1.3;
   text-align: center;
   text-transform: uppercase;
 }
 
+#restaurants-list .restaurant-img {
+  background-color: #97939A;
+  display: block;
+  margin: 0;
+  max-width: 100%;
+  min-height: 248px;
+  min-width: 100%;
+}
+
 #restaurants-list h3 {
   margin: 5% 5% 0 5%;
-  font-size: 11pt;
   color: #97939A;
-  text-transform: uppercase;
   text-align: end;
+  letter-spacing: 1px;
 }
 
 #restaurants-list p {
-  margin: 0 5% 5% 5%;
-  font-size: 11pt;
+  margin: 2% 5% 5% 5%;
   text-align: end;
 }
+
 #restaurants-list li a {
   background-color: #FCA536;
   color: white;
+  width: 100%;
+  height: 75px;
   display: flex;
-  font-size: 45pt;
+  font-size: 1.25em;
+  letter-spacing: 2px;
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
-  height: 200px;
-  width: 100%;
-  border-bottom-right-radius: 60px;
+  font-weight: 400;
+  border-bottom-right-radius: 30px;
   margin: 0;
   padding: 0;
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside header {
+/*.inside header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
-}
+}*/
+
 .inside #map-container {
-  background: #B73C37 none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+    background-color: #97939A;
 }
+
 .inside #map {
-  background-color: #ccc;
-  height: 100%;
   width: 100%;
+  height: 0;
+  padding-bottom: 100%;
 }
+
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
+
+#restaurant-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -252,7 +301,7 @@ nav h1 a {
 }
 #restaurant-cuisine {
   background-color: #333;
-  color: #ddd;
+  color: #97939A;
   font-size: 12pt;
   font-weight: 300;
   letter-spacing: 10px;
@@ -262,15 +311,19 @@ nav h1 a {
   text-transform: uppercase;
 	width: 90%;
 }
-#restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
-}
+/*#restaurant-container, #reviews-container {
+  //padding: 140px 40px 30px;
+  //width: 50%;
+}*/
+
 #reviews-container {
-  padding: 30px 40px 80px;
+  /*padding: 30px 40px 80px;*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
@@ -283,8 +336,7 @@ nav h1 a {
   padding: 0;
 }
 #reviews-list li {
-  background-color: #fff;
-    border: 2px solid #f3f3f3;
+  background-color: white;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -292,10 +344,27 @@ nav h1 a {
   padding: 0 20px 20px;
   position: relative;
   width: 85%;
+  border-top-left-radius: 50px;
+  border-bottom-right-radius: 50px;
 }
 #reviews-list li p {
-  margin: 0 0 10px;
+  margin: 15px 0 0 10px;
 }
 #restaurant-hours td {
   color: #666;
+}
+
+/* ====================== Media Queries ====================== */
+/*     Default layout is for iPhone 5/SE sizing 320 x 568      */
+
+@media only screen and (min-width: 400px) {
+
+  body,td,th,p,ul{
+    font-size: 12pt;
+  }
+
+  h3 {
+    font-size: 12pt;
+  }
+
 }
