--- a/css/styles.css
+++ b/css/styles.css
@@ -173,12 +173,12 @@ nav h1 a {
   font-family: Arial,sans-serif;
   font-size: 1em;
   text-align-last: center;
-  min-width: 150px;
   height: 60px;
   letter-spacing: 0;
   margin: 0;
-  border-top-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-top-left-radius: 1em;
+  border-bottom-right-radius: 1em;
+  padding: 2%;
 }
 
 /* ====================== Restaurant Listing ====================== */
