--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 body,td,th,p,ul{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1em;
+	font-size: 0.8750em;
 	color: #2C2F3F;
 }
 
@@ -32,19 +32,6 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
-  font-size: 1.25em;
-  font-weight: 500;
-}
-
-h2 {
-  font-size: 1.2em;
-}
-
-h3 {
-  font-size: 1.125em;
-}
-
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -64,6 +51,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   font-size: 1em;
   letter-spacing: 2px;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 #footer a {
@@ -169,7 +158,8 @@ nav h1 a {
   font-size: 1em;
   text-align-last: center;
   width: 40%;
-  height: 60px;
+  max-width: 234px;
+  min-height: 60px;
   letter-spacing: 0;
   margin: 0;
   border-top-left-radius: 1em;
@@ -180,7 +170,7 @@ nav h1 a {
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #2C2F3F;
-  margin: 10% 0% 8% 0%;
+  margin: 8% 1% 8% 1%;
   padding: 0%;
   display: flex;
   flex-wrap: wrap;
@@ -192,21 +182,24 @@ nav h1 a {
 #restaurants-list li {
   background-color: #EDE5CF;
   font-family: Arial, Helvetica, sans-serif;
-  margin: 3% 2%;
-  max-width: 372px;
+  margin: 3% 1%;
+  max-width: 96%;
   height: auto;
   border-top-left-radius: 30px;
   border-bottom-right-radius: 30px;
   flex-grow: 1;
   list-style-type: none;
   align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 #restaurants-list li h1 {
   color: #2C2F3F;
   font-family: Arial, Helvetica, sans-serif;
-  margin: 8% 3% 5% 3%;
-  font-weight: 550;
+  margin: 8% 2%;
+  font-size: 1.25em;
   letter-spacing: 0.5px;
   line-height: 1.3;
   text-align: center;
@@ -351,13 +344,24 @@ nav h1 a {
 /* ====================== Media Queries ====================== */
 /*     Default layout is for iPhone 5/SE sizing 320 x 568      */
 
+@media only screen and (min-width: 350px) {
+  body,td,th,p,ul{
+    font-size: 0.9375em;
+  }
 
+  #restaurants-list li {
+    max-width: 350px;
+  }
+}
 
 @media only screen and (min-width: 425px) {
   #map {
     padding: 0 0 80%;
   }
-  
+
+  #restaurants-list li {
+    max-width: 360px;
+  }
 }
 
 @media only screen and (min-width: 500px) {
@@ -378,12 +382,102 @@ nav h1 a {
   #map {
     padding: 0 0 50%;
   }
-  
 }
 
 @media only screen and (min-width: 1024px) {
+  body {
+   font-size: 1em;
+ }
+
   #map {
     padding: 0 0 40%;
   }
-  
+}
+
+@media only screen and (min-width: 1440px) {
+  body {
+     margin: 0 1%;
+    font-size: 1.125em;
+  }
+
+  nav {
+    height: 175px;
+  }
+
+  #footer {
+    height: 150px;
+  }
+
+  #map {
+    padding: 0 0 30%;
+  }
+
+  .filter-options {
+    height: 125px;
+  }
+
+  #restaurants-list li {
+    max-width: 400px;
+  }
+
+  #restaurants-list li a {
+    height: 94px;
+  }
+}
+
+@media only screen and (min-width: 2000px) {
+  body {
+    margin: 0 2%;
+    font-size: 1.2em;
+  }
+
+  nav {
+    height: 200px;
+  }
+
+  #footer {
+    height: 175px;
+  }
+
+  #map {
+    padding: 0 0 25%;
+  }
+
+  .filter-options {
+    height: 150px;
+  }
+
+  #restaurants-list li {
+    max-width: 420px;
+  }
+
+  #restaurants-list li a {
+    height: 100px;
+  }
+}
+
+@media only screen and (min-width: 3000px) {
+  body {
+    font-size: 1.25em;
+  }
+
+  nav {
+    height: 225px;
+  }
+
+  #footer {
+    height: 200px;
+  }
+
+  .filter-options {
+    height: 175px;
+  }
+
+  #restaurants-list li {
+    max-width: 440px;
+  }
+
+  #restaurants-list li a {
+    height: 125px;
+  }
 }
