--- a/css/styles.css
+++ b/css/styles.css
@@ -300,43 +300,47 @@ nav h1 a {
   padding: 20px;
   border-top-left-radius: 30px;
   border-bottom-right-radius: 30px;
+  border-spacing: 12px;
+  border-collapse: separate;
 }
 
 #reviews-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 100%;
 }
 
-#reviews-container h2 {
+#reviews-container h1 {
   color: #f58500;
-  font-size: 24pt;
-  font-weight: 300;
-  letter-spacing: -1px;
+  letter-spacing: 1px;
   padding-bottom: 1pt;
+  margin-top: 0;
+  text-align: center;
 }
+
 #reviews-list {
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
 }
+
 #reviews-list li {
   background-color: white;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: 95%;
   border-top-left-radius: 30px;
   border-bottom-right-radius: 30px;
+  margin-bottom: 8%;
+  padding: 15px 0;
 }
+
 #reviews-list li p {
-  margin: 15px 0 0 10px;
-}
-#restaurant-hours td {
-  color: #666;
+  color: #2C2F3F;
+  padding: 5px 20px;
 }
 
 /* ====================== Media Queries ====================== */
