--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@
 
 body,td,th,p,ul{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 0.8750em;
+  font-size: 0.9em;
+  font-weight: 500;
 	color: #2C2F3F;
 }
 
@@ -18,13 +19,14 @@ li {
 	color: #2C2F3F;
 }
 a {
-	color: #FCA536;
-	text-decoration: none;
-}
-a:hover, a:focus {
 	color: white;
 	text-decoration: none;
 }
+a:hover, a:focus {
+	color: #B73C37;
+	text-decoration: none;
+}
+
 a img{
 	border: none 0px white;
 }
@@ -40,16 +42,18 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 
 #footer {
-  background-color: #B73C37;
-  color: #EDE5CF;
+  background-color: #97939A;
+  color: #2C2F3F;
   width: 100%;
-  height: 100px;
+  height: 125px;
   display: flex;
   flex-wrap: wrap;
   align-content: center;
   justify-content: center;
   font-size: 1em;
+  font-weight: bold;
   letter-spacing: 2px;
+  line-height: 25px;
   text-align: center;
   margin: 0;
   padding: 0;
@@ -57,6 +61,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 #footer a {
   margin: 0% 1%;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 /* ====================== Navigation ====================== */
 nav {
@@ -89,25 +95,26 @@ nav h1 a {
   height: 75px;
   align-items: center;
   justify-items: center;
+  padding-left: 4%;
 }
 
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
     text-transform: uppercase;
-    font-weight: bold;
+    letter-spacing: 2px;
+    font-weight: 600;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-    padding: 10px;
-    font-weight: bold;
+    padding: 6px;
     content: "/\00a0";
 }
 
 #breadcrumb li a {
     text-decoration: none;
-    
+    padding-left: 0;
 }
 
 /* ====================== Map ====================== */
@@ -139,9 +146,9 @@ nav h1 a {
 }
 
 .filter-options h2 {
-  color: white;
+  color: #2C2F3F;
   text-align: start;
-  font-weight: 400;
+  font-weight: bold;
   line-height: 1;
   margin: 0 0 4% 5%;
   padding: 5% 0 0 0;
@@ -161,6 +168,7 @@ nav h1 a {
   color: white;
   font-family: Arial,sans-serif;
   font-size: 1em;
+  font-weight: 500;
   text-align-last: center;
   width: 42%;
   min-width: fit-content;
@@ -225,6 +233,7 @@ nav h1 a {
   margin: 5% 5% 0 5%;
   color: #97939A;
   text-align: end;
+  text-transform: uppercase;
   letter-spacing: 1px;
 }
 
@@ -240,29 +249,23 @@ nav h1 a {
   height: 75px;
   display: flex;
   font-size: 1.25em;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 500;
   border-bottom-right-radius: 30px;
   margin: 0;
   padding: 0;
 }
 
 /* ====================== Restaurant Details ====================== */
-/*.inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}*/
 
 #restaurant-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 8% 1%;
+  margin: 9% 1%;
 }
 
 #restaurant-name {
@@ -270,13 +273,13 @@ nav h1 a {
   font-family: Arial,sans-serif;
   font-weight: 600;
   letter-spacing: 3px;
-  margin: 15px 0 30px;
+  margin: 6% 3%;
   text-transform: uppercase;
   text-align: center;
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 95%;
 }
 
 #restaurant-cuisine {
@@ -287,30 +290,33 @@ nav h1 a {
   padding: 10px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 95%;
 }
 
 #restaurant-address {
-  color: #97939A;
-  margin: 5% 0;
+  color: white;
+  font-weight: 500;
+  margin: 8% 0;
 }
 
 #restaurant-hours {
   background-color: white;
   padding: 20px;
-  border-top-left-radius: 30px;
-  border-bottom-right-radius: 30px;
+  border-top-left-radius: 28px;
+  border-bottom-right-radius: 28px;
   border-spacing: 12px;
   border-collapse: separate;
 }
 
 #reviews-container {
   width: 100%;
+  min-height: 420px;
 }
 
 #reviews-container h1 {
   color: #f58500;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
   padding-bottom: 1pt;
   margin-top: 0;
   text-align: center;
@@ -326,21 +332,59 @@ nav h1 a {
 }
 
 #reviews-list li {
-  background-color: white;
-  display: block;
+  background: #EDE5CF;
+  background-size: 10%, 90%;
   list-style-type: none;
   overflow: hidden;
-  position: relative;
-  width: 95%;
+  width: 93%;
   border-top-left-radius: 30px;
   border-bottom-right-radius: 30px;
   margin-bottom: 8%;
-  padding: 15px 0;
+  padding: 6% 0;
+
+  display: grid;
+  grid-template-columns: 6% 43% 45% 6%;
+  grid-template-rows: auto;
+  
+  grid-template-areas: 
+    ". reviewer date ."
+    ". rating . ."
+    ". comments comments .";
+
+    justify-items: start;
+    align-items: center;
 }
 
-#reviews-list li p {
-  color: #2C2F3F;
-  padding: 5px 20px;
+#reviews-list h2 {
+  letter-spacing: 2px;
+  font-weight: bold;
+}
+
+#reviews-list h4 {
+  background-color: #2C2F3F;
+  color: white;
+  letter-spacing: 1px;
+  padding: 10% 5% 5% 5%;
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  min-height: 36px;
+  justify-self: end;
+}
+
+#reviews-list #rating {
+  background-color: #f58500;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 2px;
+  padding: 12px 10px;
+  border-radius: 5px;
+  margin-top: 5px;
+  min-height: 20px;
+}
+
+#reviews-list p {
+  line-height: 2em;
 }
 
 /* ====================== Media Queries ====================== */
