--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,6 @@ nav h1 a {
   list-style: none;
   background-color: #B73C37;
   margin: 0;
-  width: 100%;
   display: flex;
   height: 75px;
   align-items: center;
@@ -125,6 +124,7 @@ nav h1 a {
   background-color: #97939A;
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 #map {
@@ -483,11 +483,12 @@ nav h1 a {
 
   /* ====================== Restaurant Details ====================== */
   #restaurant-img {
-    max-width: 716px;
+    max-width: 800px;
   }
 
   #restaurant-cuisine {
-    max-width: 716px;
+    max-width: 800px;
+    padding: 20px 0;
   }
 }
 
@@ -505,7 +506,9 @@ nav h1 a {
   }
 
   /* ====================== Restaurant Details ====================== */
-
+  #restaurant-cuisine {
+    padding: 25px 0;
+  }
 }
 
 @media only screen and (min-width: 1440px) {
@@ -555,6 +558,56 @@ nav h1 a {
   }
 
   /* ====================== Restaurant Details ====================== */
+  #restaurant-container {
+    display: grid;
+    grid-template-columns: 800px auto;
+    grid-template-rows: auto auto auto 400px auto auto;
+    grid-template-areas: 
+    "restaurantName ."
+    "restaurantImage ."
+    "restaurantImage restaurantAddress"
+    "restaurantImage restaurantHours"
+    "restaurantImage ."
+    "restaurantCuisine .";
+    justify-content: center;
+  }
+
+  #restaurant-name {
+    grid-area: restaurantName;
+    justify-self: center;
+  }
+
+  #restaurant-img {
+    grid-area: restaurantImage;
+    width: 800px;
+    max-width: 800px;
+    min-width: 800px;
+  }
+
+  #restaurant-cuisine {
+    grid-area: restaurantCuisine;
+    width: 800px;
+    max-width: 800px;
+    min-width: 800px;
+  }
+
+  #restaurant-address {
+    grid-area: restaurantAddress;
+    text-align: center;
+    padding-bottom: 0px;
+    margin-left: 40px;
+    margin-bottom: 0px;
+  }
+
+  #restaurant-hours {
+    grid-area: restaurantHours;
+    min-width: 300px;
+    height: 250px;
+    max-height: 250px;
+    min-height: 250px;
+    justify-self: end;
+    margin-left: 40px;
+  }
 }
 
 @media only screen and (min-width: 2000px) {
